@@ -8,7 +8,6 @@ import com.google.genai.types.Content;
 import com.google.genai.types.GenerateContentResponse;
 import com.google.genai.types.HttpOptions;
 import com.google.genai.types.Part;
-import com.google.genai.types.ThinkingConfig;
 import com.google.genai.types.FunctionCall;
 import com.google.genai.types.FunctionDeclaration;
 import com.google.genai.types.FunctionResponse;
@@ -18,7 +17,6 @@ import jakarta.annotation.PostConstruct;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
@@ -37,49 +35,71 @@ public class GeminiService {
 
     // 세션별 대화 기록 저장소 (메모리)
     private final Map<String, List<Content>> chatHistories = new ConcurrentHashMap<>();
+    
+    // 최대 도구 사용 반복 횟수
+    private static final int MAX_TOOL_TURNS = 5;
 
     public GeminiService(com.numlock.pika.repository.ProductRepository productRepository) {
         this.productRepository = productRepository;
     }
 
-    // API 키 유효성 검사 및 클라이언트 초기화 (애플리케이션 시작 시 1회)
+    /**
+     * 시세 분석 결과를 채팅 히스토리에 수동으로 삽입                                   
+     * 분석 후 일반 채팅으로 대화를 이어갈 때 AI가 분석 내용을 기억
+     */
+    public void saveAnalysisToHistory(String sessionId, String productName, String analysisResult) {
+        List<Content> history = chatHistories.computeIfAbsent(sessionId, k -> new ArrayList<>());
+                        
+        // 시스템 안내가 아직 없다면 추가 (채팅 기능 활성화)
+        if (history.isEmpty()) {
+            addSystemInstruction(history);    
+        }
+
+        // 사용자가 분석을 요청한 것처럼 기록
+        history.add(Content.builder().role("user")
+                .parts(Collections.singletonList(Part.builder().text(productName + " 상품의 시세 분석을 보여줘.").build())).build());
+
+        // AI가 분석 결과를 답변한 것처럼 기록
+        history.add(Content.builder().role("model")
+                .parts(Collections.singletonList(Part.builder().text(analysisResult).build())).build());
+        
+        System.out.println("=== [Memory] Analysis result saved to session: " + sessionId + " ===");
+    }
+
+    private void addSystemInstruction(List<Content> history) {
+        String systemInstruction = "당신은 중고마켓 Pika의 AI입니다. 상품 검색 결과가 '0건'이면, 즉시 다른 줄임말(예: 귀칼, 롤)이나 핵심 키워드로 다시 검색 도구를 호출하세요. 최대 3~4회까지 시도해도 없으면 없다고 답하세요.";
+        history.add(Content.builder().role("user").parts(Collections.singletonList(Part.builder().text(systemInstruction).build())).build());
+        history.add(Content.builder().role("model").parts(Collections.singletonList(Part.builder().text("네, 알겠습니다.").build())).build());
+    }
+
     @PostConstruct
     public void init() {
         if (geminiApiKey == null || geminiApiKey.trim().isEmpty()) {
-
-            throw new IllegalArgumentException("Gemini API Key가 설정되지 않았습니다. application.properties 또는 환경 변수에 'gemini.api.key'를 설정해주세요.");
+            throw new IllegalArgumentException("Gemini API Key가 설정되지 않았습니다.");
         }
         this.geminiClient = Client.builder()
                 .apiKey(geminiApiKey)
-                .httpOptions(HttpOptions.builder().apiVersion("v1beta").build()) // API 버전을 v1beta로 설정 (Tools 사용 위해)
+                .httpOptions(HttpOptions.builder().apiVersion("v1beta").build())
                 .build();
     }
 
     /**
-     * 상품 시세 분석 (MCP/Function Calling + Google Search Grounding)
-     * AI가 스스로 DB 조회 도구를 사용해 정보를 얻고, 구글 검색을 병행하여 분석합니다.
-     *
-     * @param productId 분석할 상품 ID
-     * @return 분석 결과 텍스트
+     * 상품 시세 분석 (함수 호출과 구글 검색)
+     * 상품 ID 기반 조회이므로 단일 프로세스로 진행
      */
     public String analyzeProductPrice(int productId) {
-        // 대화 기록 (이 분석 요청만을 위한 임시 히스토리)
         List<Content> history = new ArrayList<>();
 
-        // 1. 도구 정의 (분리)
         Tool dbTool = Tool.builder()
                 .functionDeclarations(Collections.singletonList(
                         FunctionDeclaration.builder()
                                 .name("get_product_detail")
-                                .description("상품 ID를 입력받아 상품의 상세 정보(제목, 가격, 카테고리)와 Pika 마켓 내 동일 카테고리/키워드 평균 거래가를 조회합니다.")
+                                .description("상품 ID를 입력받아 상품의 상세 정보와 내부 평균 거래가를 조회합니다.")
                                 .parameters(
                                         Schema.builder()
                                                 .type(Type.Known.OBJECT)
                                                 .properties(Map.of(
-                                                        "productId", Schema.builder()
-                                                                .type(Type.Known.STRING)
-                                                                .description("분석할 상품의 ID (숫자)")
-                                                                .build()
+                                                        "productId", Schema.builder().type(Type.Known.STRING).description("상품 ID").build()
                                                 ))
                                                 .required(Collections.singletonList("productId"))
                                                 .build()
@@ -92,35 +112,24 @@ public class GeminiService {
                 .googleSearch(GoogleSearch.builder().build())
                 .build();
 
-        // 2. 프롬프트 구성 (명확한 지시)
-        String prompt = String.format(
-                "상품 ID '%d'번에 대한 시세 분석을 시작해. 먼저 `get_product_detail` 도구를 사용해 DB에서 상품 정보를 가져와줘.",
-                productId
-        );
-
+        String prompt = String.format("상품 ID '%d'번에 대한 시세 분석을 시작해. 먼저 `get_product_detail` 도구로 정보를 가져와줘.", productId);
         history.add(Content.builder().role("user").parts(Collections.singletonList(Part.builder().text(prompt).build())).build());
 
         try {
-            // [1단계] DB 조회 도구만 활성화
+            //DB 조회
             GenerateContentConfig dbConfig = GenerateContentConfig.builder()
                     .tools(Collections.singletonList(dbTool))
-                    .temperature(0.1f) // 함수 호출의 정확도를 위해 낮음
+                    .temperature(0.1f)
                     .build();
 
             GenerateContentResponse response = geminiClient.models.generateContent("models/gemini-2.5-flash", history, dbConfig);
 
-            // 함수 호출 처리 루프
             if (response != null && response.candidates().isPresent() && !response.candidates().get().isEmpty()) {
                 com.google.genai.types.Candidate candidate = response.candidates().get().get(0);
+                if (candidate.content().isPresent()) history.add(candidate.content().get());
 
-                if (candidate.content().isPresent()) {
-                    history.add(candidate.content().get());
-                }
-
-                List<Part> parts = Collections.emptyList();
-                if (candidate.content().isPresent() && candidate.content().get().parts().isPresent()) {
-                    parts = candidate.content().get().parts().get();
-                }
+                List<Part> parts = candidate.content().isPresent() && candidate.content().get().parts().isPresent() 
+                        ? candidate.content().get().parts().get() : Collections.emptyList();
 
                 boolean functionCalled = false;
                 List<Part> functionResponseParts = new ArrayList<>();
@@ -128,16 +137,13 @@ public class GeminiService {
                 for (Part part : parts) {
                     if (part.functionCall().isPresent()) {
                         FunctionCall call = part.functionCall().get();
-
-                        if (call.name().isPresent() && "get_product_detail".equals(call.name().get())) {
+                        if ("get_product_detail".equals(call.name().orElse(""))) {
                             functionCalled = true;
-                            Map<String, Object> args = call.args().orElse(Collections.emptyMap());
-                            String idStr = (String) args.get("productId");
-
-                            System.out.println("=== [Analyze Tool] Gemini requests function: get_product_detail(" + idStr + ") ===");
-
+                            String idStr = (String) call.args().orElse(Collections.emptyMap()).get("productId");
+                            System.out.println("=== [Analyze] DB Search: " + idStr + " ===");
+                            
                             String dbResult = executeProductDetailSearch(idStr);
-
+                            
                             functionResponseParts.add(Part.builder()
                                     .functionResponse(FunctionResponse.builder()
                                             .name(call.name().get())
@@ -149,213 +155,148 @@ public class GeminiService {
                 }
 
                 if (functionCalled) {
-                    // 함수 결과를 모델에게 전달
-                    Content functionResponseContent = Content.builder()
-                            .role("function")
-                            .parts(functionResponseParts)
-                            .build();
-                    history.add(functionResponseContent);
+                    history.add(Content.builder().role("function").parts(functionResponseParts).build());
 
-                    // [2단계] 구글 검색 도구로 교체하여 최종 분석 요청
-                    // 모델에게 이제 검색하고 분석하라는 추가 지시를 내림 (Context 유지)
-                    String finalPrompt = "DB에서 확인된 상품명(키워드)을 바탕으로 구글 검색을 수행하여 '정가'와 '중고 시세'를 찾고, " +
-                            "수집한 정보를 종합하여 아래 **출력 형식**에 맞춰 분석 보고서를 작성해줘.\n\n" +
-                            "[출력 형식]\n" +
-                            "### 🏷️ [상품명] 분석 결과\n\n" +
-                            "**💰 가격 정보**\n" +
-                            "- **판매 희망가:** (판매 희망가)원\n" +
-                            "- **정가(신품가):** (검색된 정가, 모르면 '정보 없음')\n" +
-                            "- **중고 시세:** (검색된 중고 시세 범위)\n" +
-                            "- **Pika 내 평균:** (DB에서 조회한 평균가)\n\n" +
-                            "**📊 분석 및 코멘트**\n" +
-                            "- **상품 요약:** (상품 특징 1줄 요약)\n" +
-                            "- **가격 분석:** (판매가가 시세 대비 어떤지, 구매/판매 추천 여부를 2~3문장으로 핵심만 요약)";
-                    
+                    //구글 검색 및 분석
+                    String finalPrompt = "확인된 상품명으로 구글 검색을 수행하여 '정가'와 '중고 시세'를 찾아줘. 답변 시 Product ID나 상품 번호는 절대 언급하지 말고, 오직 상품명을 기준으로 3~5줄 이내로 핵심만 간결하게 분석해줘.";
                     history.add(Content.builder().role("user").parts(Collections.singletonList(Part.builder().text(finalPrompt).build())).build());
 
                     GenerateContentConfig searchConfig = GenerateContentConfig.builder()
-                            .tools(Collections.singletonList(googleSearchTool)) // 구글 검색 도구만 활성화
+                            .tools(Collections.singletonList(googleSearchTool))
                             .temperature(0.5f)
                             .maxOutputTokens(2500)
                             .build();
 
                     GenerateContentResponse finalResponse = geminiClient.models.generateContent("models/gemini-2.5-flash", history, searchConfig);
-
-                    if (finalResponse != null && finalResponse.candidates().isPresent() && !finalResponse.candidates().get().isEmpty()) {
-                        String finalText = finalResponse.text();
-                        System.out.println("=== [Analyze Tool] Final Answer: " + finalText);
-                        return finalText != null ? finalText : "분석 결과를 생성하지 못했습니다.";
-                    }
-                } else {
-                    String text = response.text();
-                    System.out.println("=== [Analyze Tool] Failed to call DB function: " + text);
-                    return "AI가 상품 정보를 조회하지 못했습니다.";
+                    return finalResponse.text();
                 }
             }
-
         } catch (Exception e) {
-            System.err.println("Gemini Analysis 오류: " + e.getMessage());
             e.printStackTrace();
-            return "죄송합니다. 시세 분석 중 오류가 발생했습니다: " + e.getMessage();
+            return "분석 중 오류가 발생했습니다.";
         }
-
-        return "시세 정보를 가져오지 못했습니다.";
+        return "정보를 가져오지 못했습니다.";
     }
 
-    /**
-     * 시세 분석용 상품 상세 정보 조회 (Tool Execution)
-     */
     private String executeProductDetailSearch(String productIdStr) {
         try {
             int productId = Integer.parseInt(productIdStr);
-            com.numlock.pika.domain.Products product = productRepository.findById(productId)
-                    .orElse(null);
+            com.numlock.pika.domain.Products product = productRepository.findById(productId).orElse(null);
+            if (product == null) return "Error: 상품 없음";
 
-            if (product == null) {
-                return "Error: 해당 ID(" + productId + ")의 상품을 찾을 수 없습니다.";
-            }
+            Double internalAvg = productRepository.findAveragePriceByTitleAndCategory(product.getTitle(), product.getCategory().getCategoryId());
+            String avgPriceStr = (internalAvg != null) ? String.format("%,.0f원", internalAvg) : "산출 불가";
 
-            // 검색 키워드 추출 (기존 extractSearchKeyword 로직 대신 제목을 그대로 사용하거나 간단히 처리)
-            // 여기서는 제목을 그대로 제공하고 모델이 판단하게 함
-            String keyword = product.getTitle();
-
-            // 내부 평균 시세 조회
-            Double internalAvg = productRepository.findAveragePriceByTitleAndCategory(
-                    keyword,
-                    product.getCategory().getCategoryId()
-            );
-            String avgPriceStr = (internalAvg != null) ? String.format("%,.0f원", internalAvg) : "데이터 부족으로 산출 불가";
-
-            // JSON 형태 또는 명확한 텍스트로 반환
-            return String.format(
-                    "{" +
-                    "\"productId\": %d, " +
-                    "\"title\": \"%s\", " +
-                    "\"price\": %s, " +
-                    "\"category\": \"%s\", " +
-                    "\"internalAveragePrice\": \"%s\", " +
-                    "\"description\": \"%s\"" +
-                    "}",
-                    product.getProductId(),
-                    product.getTitle(),
-                    product.getPrice(),
-                    product.getCategory().getCategory(),
-                    avgPriceStr,
-                    product.getDescription().replaceAll("[\"\\n]", " ") // 간단한 이스케이프 처리
-            );
-
-        } catch (NumberFormatException e) {
-            return "Error: 유효하지 않은 상품 ID 형식입니다.";
+            return String.format("{\"title\": \"%s\", \"price\": %s, \"avg\": \"%s\", \"desc\": \"%s\"}",
+                    product.getTitle(), product.getPrice(), avgPriceStr, product.getDescription().replaceAll("[\"\\n]", " "));
         } catch (Exception e) {
-            return "Error: DB 조회 중 오류 발생 - " + e.getMessage();
+            return "Error: " + e.getMessage();
         }
     }
 
     /**
-     * 사용자의 채팅 메시지에 대한 답변을 생성합니다.
-     * 대화 맥락(Context)을 유지하며 답변합니다.
-     *
-     * @param sessionId   사용자 세션 ID
-     * @param userMessage 사용자 메시지
-     * @return AI 답변
+     * AI 채팅 (자동 재검색 루프 및 횟수 제한 적용)
+     * 결과가 없으면 AI가 스스로 판단하여 줄임말/동의어로 재검색을 시도
      */
     public String getChatResponse(String sessionId, String userMessage) {
         try {
-            // 해당 세션의 대화 기록 가져오기 (없으면 생성)
             List<Content> history = chatHistories.computeIfAbsent(sessionId, k -> new ArrayList<>());
 
-            // 1. 도구(Function) 정의
             Tool searchTool = Tool.builder()
-                    .functionDeclarations(Collections.singletonList(
+                    .functionDeclarations(List.of(
                             FunctionDeclaration.builder()
                                     .name("search_market_products")
-                                    .description("사용자가 특정 상품의 시세, 재고, 구매 가능 여부, 상품 목록 등을 물어볼 때 DB에서 상품을 검색합니다. 사용자가 구체적인 상품명을 언급하지 않아도 문맥상 상품 검색이 필요하면 사용하세요.")
+                                    .description("우리 쇼핑몰(Pika) 내부의 상품 재고, 가격을 DB에서 검색합니다.")
                                     .parameters(
                                             Schema.builder()
                                                     .type(Type.Known.OBJECT)
-                                                    .properties(Map.of(
-                                                            "keyword", Schema.builder()
-                                                                    .type(Type.Known.STRING)
-                                                                    .description("검색할 상품명 (예: 원피스, 아이폰, 자전거)")
-                                                                    .build()
-                                                    ))
+                                                    .properties(Map.of("keyword", Schema.builder().type(Type.Known.STRING).description("상품명").build()))
                                                     .required(Collections.singletonList("keyword"))
+                                                    .build()
+                                    )
+                                    .build(),
+                            FunctionDeclaration.builder()
+                                    .name("search_web_info")
+                                    .description("쇼핑몰 내부에 없는 일반적인 정보, 외부 중고 시세, 뉴스 등을 구글에서 검색합니다.")
+                                    .parameters(
+                                            Schema.builder()
+                                                    .type(Type.Known.OBJECT)
+                                                    .properties(Map.of("query", Schema.builder().type(Type.Known.STRING).description("검색어").build()))
+                                                    .required(Collections.singletonList("query"))
                                                     .build()
                                     )
                                     .build()
                     ))
                     .build();
 
-            // 2. 시스템 프롬프트 설정 (히스토리가 비었을 때만)
+            // 히스토리가 비었을 때만 시스템 지침 추가
             if (history.isEmpty()) {
-                String systemInstruction = "당신은 중고거래 마켓 'Pika'의 AI 어시스턴트입니다.\n" +
-                        "- 사용자가 상품 정보를 물으면 `search_market_products` 도구를 사용하여 실제 DB 데이터를 확인한 후 답변하세요.\n" +
-                        "- 도구 실행 결과가 없으면 '현재 판매 중인 해당 상품이 없습니다'라고 정직하게 말하세요.\n" +
-                        "- 답변은 친절하고 간결하게(3~4문장) 작성하세요.";
-                
-                Content systemContent = Content.builder()
-                        .role("user")
-                        .parts(Collections.singletonList(Part.builder().text(systemInstruction).build()))
-                        .build();
-                history.add(systemContent);
-                
-                // 턴을 맞추기 위한 모델의 더미 응답
-                history.add(Content.builder().role("model").parts(Collections.singletonList(Part.builder().text("네, 알겠습니다.").build())).build());
+                addSystemInstruction(history);
             }
 
-            // 3. 사용자 메시지 추가
-            Content userContent = Content.builder()
-                    .role("user")
-                    .parts(Collections.singletonList(Part.builder().text(userMessage).build()))
-                    .build();
-            history.add(userContent);
+            history.add(Content.builder().role("user").parts(Collections.singletonList(Part.builder().text(userMessage).build())).build());
 
-            // 4. 1차 호출 (Tools 포함)
             GenerateContentConfig chatConfig = GenerateContentConfig.builder()
-                    .tools(Collections.singletonList(searchTool))
+                    .tools(Collections.singletonList(searchTool)) // Function Call만 설정 (Web Search는 함수 내부에서 우회 호출)
                     .maxOutputTokens(3000)
                     .temperature(0.7f)
                     .build();
 
-            GenerateContentResponse response = geminiClient.models.generateContent("models/gemini-2.5-flash", history, chatConfig);
+            int turnCount = 0;
 
-            // 5. 응답 처리 (함수 호출 vs 텍스트 답변)
-            if (response != null && response.candidates().isPresent() && !response.candidates().get().isEmpty()) {
-                com.google.genai.types.Candidate candidate = response.candidates().get().get(0);
+            // 루프 시작. 모델이 만족하거나 한계에 도달할 때까지 반복
+            while (turnCount < MAX_TOOL_TURNS) {
+                GenerateContentResponse response = geminiClient.models.generateContent("models/gemini-2.5-flash", history, chatConfig);
                 
-                // 모델의 1차 응답(함수 호출 요청 포함 가능)을 히스토리에 저장
-                if (candidate.content().isPresent()) {
-                    history.add(candidate.content().get());
+                if (response == null || response.candidates().isEmpty() || response.candidates().get().isEmpty()) {
+                    return "응답을 생성할 수 없습니다.";
                 }
 
-                List<Part> parts = Collections.emptyList();
-                if (candidate.content().isPresent() && candidate.content().get().parts().isPresent()) {
-                    parts = candidate.content().get().parts().get();
+                com.google.genai.types.Candidate candidate = response.candidates().get().get(0);
+                if (candidate.content().isPresent()) {
+                    history.add(candidate.content().get()); // 모델의 생각이나 도구 호출을 기록
                 }
+
+                List<Part> parts = candidate.content().isPresent() && candidate.content().get().parts().isPresent()
+                        ? candidate.content().get().parts().get() : Collections.emptyList();
 
                 boolean functionCalled = false;
                 List<Part> functionResponseParts = new ArrayList<>();
 
                 for (Part part : parts) {
-                    // FunctionCall 확인 (Optional 처리)
                     if (part.functionCall().isPresent()) {
                         FunctionCall call = part.functionCall().get();
-                        
-                        if (call.name().isPresent() && "search_market_products".equals(call.name().get())) {
+                        String callName = call.name().orElse("");
+
+                        if ("search_market_products".equals(callName)) {
                             functionCalled = true;
-                            Map<String, Object> args = call.args().orElse(Collections.emptyMap());
-                            String keyword = (String) args.get("keyword");
+                            String keyword = (String) call.args().orElse(Collections.emptyMap()).get("keyword");
+                            System.out.println("=== [Chat Loop " + (turnCount + 1) + "] DB Searching: " + keyword + " ===");
+
+                            String result = executeProductSearch(keyword);
                             
-                            System.out.println("=== [Tool Use] Gemini requests function: search_market_products(" + keyword + ") ===");
+                            // 힌트 추가: 결과가 없으면 재검색 유도
+                            if (result.contains("발견되지 않았습니다")) {
+                                result += " (힌트: 다른 키워드나 줄임말로 다시 시도해보세요.)";
+                            }
 
-                            // DB 조회 실행
-                            String searchResult = executeProductSearch(keyword);
-
-                            // 결과 생성 (FunctionResponse)
                             functionResponseParts.add(Part.builder()
                                     .functionResponse(FunctionResponse.builder()
-                                            .name(call.name().get())
-                                            .response(Map.of("result", searchResult))
+                                            .name(callName)
+                                            .response(Map.of("result", result))
+                                            .build())
+                                    .build());
+                        } else if ("search_web_info".equals(callName)) {
+                            functionCalled = true;
+                            String query = (String) call.args().orElse(Collections.emptyMap()).get("query");
+                            System.out.println("=== [Chat Loop " + (turnCount + 1) + "] Web Searching (Proxy): " + query + " ===");
+
+                            String webResult = executeGoogleSearch(query);
+
+                            functionResponseParts.add(Part.builder()
+                                    .functionResponse(FunctionResponse.builder()
+                                            .name(callName)
+                                            .response(Map.of("result", webResult))
                                             .build())
                                     .build());
                         }
@@ -363,113 +304,81 @@ public class GeminiService {
                 }
 
                 if (functionCalled) {
-                    // 6. 함수 실행 결과를 모델에게 전달 (2차 호출)
-                    Content functionResponseContent = Content.builder()
-                            .role("function") // 중요: 역할은 function
-                            .parts(functionResponseParts)
-                            .build();
-                    history.add(functionResponseContent);
-
-                    // 도구 결과를 포함하여 다시 모델 호출 (최종 답변 생성)
-                    GenerateContentResponse finalResponse = geminiClient.models.generateContent("models/gemini-2.5-flash", history, chatConfig);
-                    
-                    if (finalResponse != null && finalResponse.candidates().isPresent() && !finalResponse.candidates().get().isEmpty()) {
-                         String finalText = finalResponse.text();
-                         System.out.println("=== [Tool Use] Final Answer: " + finalText);
-                         
-                         // 최종 답변 히스토리 저장
-                         if (finalResponse.candidates().get().get(0).content().isPresent()) {
-                             history.add(finalResponse.candidates().get().get(0).content().get());
-                         }
-                         return finalText;
-                    }
+                    // 도구 실행 결과를 모델에게 전달하고 루프 계속 (모델이 결과를 보고 판단)
+                    history.add(Content.builder().role("function").parts(functionResponseParts).build());
+                    turnCount++;
                 } else {
-                    // 함수 호출 없이 바로 답변이 온 경우
-                    String text = response.text();
-                    System.out.println("=== [Chat] Normal Response: " + text);
-                    return text;
+                    // 도구 호출이 없으면 최종 텍스트 답변이므로 루프 종료 및 반환
+                    return response.text();
                 }
             }
+
+            return "여러 번 검색해 보았지만, 해당 상품 정보를 찾을 수 없습니다.";
+
         } catch (Exception e) {
-            System.err.println("Gemini Chat 오류: " + e.getMessage());
             e.printStackTrace();
-            return "죄송합니다. 서비스 연결 중 오류가 발생했습니다.";
+            return "서비스 연결 중 오류가 발생했습니다.";
         }
-        return "죄송합니다. 이해하지 못했습니다.";
     }
 
     private String executeProductSearch(String keyword) {
-        if (keyword == null || keyword.trim().isEmpty()) {
-            return "검색어가 유효하지 않습니다.";
-        }
-
+        if (keyword == null || keyword.trim().isEmpty()) return "검색어 오류";
         try {
-            // DB에서 상품 검색 (최신순 5개)
             org.springframework.data.domain.Page<com.numlock.pika.domain.Products> products =
                     productRepository.searchByFilters(keyword, null, org.springframework.data.domain.PageRequest.of(0, 5));
 
             if (products.hasContent()) {
-                long totalElements = products.getTotalElements();
                 StringBuilder sb = new StringBuilder();
-                sb.append("DB 검색 결과 ('").append(keyword).append("'): 총 ").append(totalElements).append("건 발견.\n")
-                        .append("최신 등록 상품 5건:\n");
-
+                sb.append("검색 결과 '" + keyword + "' 총 ").append(products.getTotalElements()).append("건:\n");
                 for (com.numlock.pika.domain.Products p : products.getContent()) {
-                    sb.append("- [").append(p.getProductState() == 0 ? "판매중" : "판매완료").append("] ")
-                            .append(p.getTitle()).append(" / 가격: ").append(p.getPrice()).append("원\n");
+                    sb.append("- [" + (p.getProductState() == 0 ? "판매중" : "판매완료") + "] ")
+                            .append(p.getTitle()).append(" / ").append(p.getPrice()).append("원\n");
                 }
                 return sb.toString();
             } else {
-                return "검색 결과: '" + keyword + "' 관련 상품이 마켓에 없습니다.";
+                return "키워드 '" + keyword + "' 상품이 발견되지 않았습니다.";
             }
         } catch (Exception e) {
-            return "상품 검색 중 시스템 오류가 발생했습니다: " + e.getMessage();
+            return "시스템 오류: " + e.getMessage();
         }
     }
 
-    /**
-     * 판매자 리뷰 목록을 기반으로 효율적인 한줄평을 생성합니다. (최적화 버전)
-     */
+    // 리뷰 요약 기능
     public String generateReviewSummary(List<String> reviewContents) {
-        // 1. 리뷰가 없거나 null인 경우 즉시 반환하여 불필요한 API 호출 방지
-        if (reviewContents == null || reviewContents.isEmpty()) {
-            return "아직 등록된 리뷰가 없습니다.";
-        }
-
-        // 2. 최신순 리뷰 10개로 제한하여 토큰 사용량 최소화 및 성능 향상
-        // (리뷰가 아무리 많아도 이 범위를 넘지 않아 안정적입니다)
-        List<String> limitedReviews = reviewContents.stream()
-                .limit(10)
-                .collect(Collectors.toList());
-
-        // 3. 리뷰 내용을 하나의 문자열로 결합
+        if (reviewContents == null || reviewContents.isEmpty()) return "아직 등록된 리뷰가 없습니다.";
+        List<String> limitedReviews = reviewContents.stream().limit(10).collect(Collectors.toList());
         String combinedReviews = String.join("\n", limitedReviews);
-
-        // 4. 예외 상황(데이터 부족 등)까지 고려한 강화된 프롬프트
-        String prompt = "다음은 판매자에 대한 실제 고객 리뷰들입니다. 이를 종합하여 판매자의 특징을 50자 이내의 한줄평으로 요약해주세요. " +
-                "만약 리뷰 내용이 짧아 요약이 어렵다면 '정보가 부족한 판매자입니다'라고 출력하세요. " +
-                "글자 수나 기호는 포함하지 마세요:\n\n" + combinedReviews;
+        String prompt = "다음 판매자 리뷰를 50자 이내 한줄평으로 요약해줘:\n" + combinedReviews;
 
         try {
-            // 5. 응답 속도를 위해 설정을 간소화하여 호출
-            GenerateContentConfig summaryConfig = GenerateContentConfig.builder()
-                    .maxOutputTokens(400) // 한줄평이므로 출력 토큰을 낮춰 비용 절감
-                    .temperature(0.5f)    // 적당한 일관성 유지
+            GenerateContentConfig summaryConfig = GenerateContentConfig.builder().maxOutputTokens(400).temperature(0.5f).build();
+            GenerateContentResponse response = geminiClient.models.generateContent("models/gemini-2.5-flash", prompt, summaryConfig);
+            return (response != null) ? response.text().trim() : "요약 불가";
+        } catch (Exception e) {
+            return "리뷰 분석 중...";
+        }
+    }
+    // Google Search 전용 독립 호출 메서드
+    private String executeGoogleSearch(String query) {
+        try {
+            // Google Search 도구만 단독으로 설정
+            Tool googleSearchTool = Tool.builder()
+                    .googleSearch(GoogleSearch.builder().build())
                     .build();
 
-            GenerateContentResponse response = geminiClient.models.generateContent("models/gemini-2.5-flash", prompt, summaryConfig);
+            GenerateContentConfig searchConfig = GenerateContentConfig.builder()
+                    .tools(Collections.singletonList(googleSearchTool))
+                    .maxOutputTokens(1000)
+                    .temperature(0.5f)
+                    .build();
 
-            // 6. 결과 추출 및 반환
-            if (response != null && response.candidates() != null && !response.candidates().isEmpty()) {
-                String resultText = response.text();
-                return (resultText != null) ? resultText.trim() : "리뷰 내용을 요약할 수 없습니다.";
-            }
+            // 문맥 없이 단발성 검색 수행
+            String prompt = "다음 키워드에 대해 검색하고 핵심 정보를 요약해줘: " + query;
+            GenerateContentResponse response = geminiClient.models.generateContent("models/gemini-2.5-flash", prompt, searchConfig);
+
+            return response.text();
         } catch (Exception e) {
-            // 7. 에러 발생 시 원인을 구체적으로 로그에 남김
-            System.err.println("Gemini 요약 API 오류: " + e.getMessage());
-            return "리뷰를 분석 중입니다. 잠시 후 확인해 주세요.";
+            return "웹 검색 중 오류 발생: " + e.getMessage();
         }
-
-        return "리뷰 요약을 생성할 수 없습니다.";
     }
 }
